# SUPERB_REPO

./: README.md  common.py  pyproject.toml
src/: common.py
src/clustering/kmeans/: wine.py
src/decision_trees/classifiers/iris/: i_common.py  iris.py  main.py
src/decision_trees/classifiers/iris_classifier/: ic_common.py  iris_classifier.py  main.py
src/decision_trees/regressors/house_value/: house_value.py
src/my_logger/: my_logger.py
src/nn/feed_forward/digits_recognizer/: digits_recognizer.py  dr_common.py  main.py
src/nn/ff/digits/: d_common.py  digits.py  main.py
src/nn/ff/digits_recognizer/: digits_recognizer.py  dr_common.py  main.py
src/nn/fnn/digits_recognizer/: main.py
tests/: conftest.py  run_tests.ps1
tests/data/: correct_tensor.pt
tests/decision_trees/classifiers/iris/: test_iris.py
tests/decision_trees/classifiers/iris_clasifier/: test_iris_classifier.py
tests/my_logger/: test_my_logger.py
tests/nn/feed_forward/digits_recognizer/: test_digits_recognizer.py
